feat: создание структуры страницы

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="color-scheme" content="dark light">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Сложно сосредоточиться</title>
   <link rel="stylesheet" href="./fonts/fonts.css" />
@@ -36,7 +36,50 @@
         </li>
       </ul>
     </nav>
+    <h1 class="header__title">no focus</h1>
+    <div class="header__subtitle">
+      <p>
+        Что делать, когда не можешь делать ничего
+      </p>
+      <p>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
+    </div>
   </header>
+  <main class="main">
+    <section class="section">
+      <h2 class="why-title"></h2>
+      <article class="card why-multitasking"></article>
+      <article class="card why-dopamine"></article>
+    </section>
+    <section class="section">
+      <h2 class="what-title"></h2>
+      <article class="card what-multitasking"></article>
+      <article class="card what-meal"></article>
+      <article class="card what-gadgets"></article>
+    </section>
+    <section class="section">
+      <h2 class="how-title"></h2>
+      <h2 class="how-title-advice"></h2>
+      <article class="card how-imagine"></article>
+      <article class="card how-music"></article>
+      <article class="card how-walk"></article>
+      <article class="card how-meal"></article>
+      <article class="card how-reading"></article>
+    </section>
+    <section class="section">
+      <h2 class="pictures-title"></h2>
+      <img class="picture picture-sunset" src="./images/sunset.png" alt="Рассвет" loading="lazy">
+      <img class="picture picture-ice-cream" src="./images/ice-cream.png" alt="Мороженное" loading="lazy">
+      <img class="picture picture-tape" src="./images/tape.png" alt="Касета" loading="lazy">
+      <img class="picture picture-books" src="./images/books.png" alt="Книги" loading="lazy">
+      <img class="picture picture-street" src="./images/street.png" alt="Улица" loading="lazy">
+    </section>
+  </main>
+  <footer class="footer">
+    <h2>focus</h2>
+  </footer>
+
   <script type="module" src="./scripts/script.js"></script>
 </body>
 
