feat: адаптация размеров и положений

--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
     <nav class="header__theme-menu">
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
-          <button class="header__theme-menu-button header__theme-menu-button_type_light">
+          <button class="header__theme-menu-button header__theme-menu-button_type_light" type="button">
             День
           </button>
         </li>
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-            disabled>
+            disabled type="button">
             Авто
           </button>
         </li>
         <li class="header__theme-menu-item">
-          <button class="header__theme-menu-button header__theme-menu-button_type_dark">
+          <button class="header__theme-menu-button header__theme-menu-button_type_dark" type="button">
             Неон
           </button>
         </li>
       </ul>
     </nav>
+    <div class="decor"></div>
     <h1 class="header__title">no focus</h1>
     <div class="header__subtitle">
       <p>
