--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
       </ul>
     </nav>
     <div class="decor"></div>
-    <h1 class="header__title">no focus</h1>
-    <div class="header__subtitle">
+    <h1 class="heading header__title">no focus</h1>
+    <h2 class="heading header__subtitle">
       <p>
         Что делать, когда не можешь делать ничего
       </p>
       <p>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
-    </div>
+    </h2>
   </header>
   <main class="main">
     <section class="section">
@@ -78,7 +78,7 @@
     </section>
   </main>
   <footer class="footer">
-    <h2>focus</h2>
+    <h2 class="heading footer-title">focus</h2>
   </footer>
 
   <script type="module" src="./scripts/script.js"></script>
