--- a/index.html
+++ b/index.html
@@ -36,32 +36,33 @@
         </li>
       </ul>
     </nav>
-    <div class="decor"></div>
+    <div class="decor-rec" aria-hidden="true"></div>
     <h1 class="heading header__title">no focus</h1>
-    <h2 class="heading header__subtitle">
+    <div class="header__subtitle title-decor">
       <p>
         Что делать, когда не можешь делать ничего
       </p>
       <p>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
-    </h2>
+    </div>
   </header>
   <main class="main">
     <section class="section">
-      <h2 class="heading why-title">Почему сосредоточиться так сложно</h2>
+      <h2 class="title why-title">Почему сосредоточиться так сложно</h2>
       <article class="card why-multitasking">
-        <h3 class="heading">Многозадачность</h3>
+        <h3 class="title title-decor">Многозадачность</h3>
         <p>
           Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность,
           когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
-          Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле
-          внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+          Исследователи <a class="link" href="https://dana.org/article/multicosts-of-multitasking/"
+            target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в
+          поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны
           стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
         </p>
       </article>
       <article class="card why-dopamine">
-        <h3 class="heading">Дофамин</h3>
+        <h3 class="title title-decor">Дофамин</h3>
         <p>
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и
           полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут
@@ -72,9 +73,9 @@
       </article>
     </section>
     <section class="section">
-      <h2 class="heading what-title">Что снижает концентрацию внимания?</h2>
+      <h2 class="title what-title">Что снижает концентрацию внимания?</h2>
       <article class="card what-multitasking">
-        <h3 class="heading">Многозадачность</h3>
+        <h3 class="title title-decor">Многозадачность</h3>
         <p>
           Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в
           целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать
@@ -83,7 +84,7 @@
         </p>
       </article>
       <article class="card what-meal">
-        <h3 class="heading">Еда</h3>
+        <h3 class="title title-decor">Еда</h3>
         <p>
           «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше
           работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные
@@ -92,7 +93,7 @@
         </p>
       </article>
       <article class="card what-gadgets">
-        <h3 class="heading">Гаджеты</h3>
+        <h3 class="title title-decor">Гаджеты</h3>
         <p>
           Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном —
           ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто
@@ -103,10 +104,11 @@
       </article>
     </section>
     <section class="section">
-      <h2 class="heading how-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-      <h2 class="heading how-title-advice">5 простых (на самом деле не очень) советов</h2>
+      <h2 class="title how-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+        секунд)</h2>
+      <h2 class="title title-decor how-title-advice">5 простых (на самом деле не очень) советов</h2>
       <article class="card how-imagine">
-        <h3 class="heading">Представьте небо и облака</h3>
+        <h3 class="title title-regular title-decor">Представьте небо и облака</h3>
         <p>
           Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
           мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
@@ -116,7 +118,7 @@
         </p>
       </article>
       <article class="card how-music">
-        <h3 class="heading">Включите музыку</h3>
+        <h3 class="title title-regular title-decor">Включите музыку</h3>
         <p>
           Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень
           сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
@@ -124,16 +126,17 @@
         </p>
       </article>
       <article class="card how-walk">
-        <h3 class="heading">Прогуляйтесь</h3>
+        <h3 class="title title-regular title-decor">Прогуляйтесь</h3>
         <p>
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает
-          концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить
-          прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
-          работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>,
+          что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
+          понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше
+          кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
         </p>
       </article>
       <article class="card how-meal">
-        <h3 class="heading">Хорошо ешьте</h3>
+        <h3 class="title title-regular title-decor">Хорошо ешьте</h3>
         <p>
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в
           крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый
@@ -141,7 +144,7 @@
         </p>
       </article>
       <article class="card how-reading">
-        <h3 class="heading">Читайте</h3>
+        <h3 class="title title-regular title-decor">Читайте</h3>
         <p>
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно
           нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто
@@ -150,7 +153,7 @@
       </article>
     </section>
     <section class="section">
-      <h2 class="heading pictures-title">А можно в картинках?</h2>
+      <h2 class="title title-decor pictures-title">А можно в картинках?</h2>
       <img class="picture picture-sunset" src="./images/sunset.png" alt="Рассвет" loading="lazy">
       <img class="picture picture-ice-cream" src="./images/ice-cream.png" alt="Мороженное" loading="lazy">
       <img class="picture picture-tape" src="./images/tape.png" alt="Касета" loading="lazy">
@@ -158,7 +161,7 @@
       <img class="picture picture-street" src="./images/street.png" alt="Улица" loading="lazy">
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer decorated-zone">
     <h2 class="heading footer-title">focus</h2>
   </footer>
 
