fix: исправления после второго ревью

--- a/index.html
+++ b/index.html
@@ -167,13 +167,15 @@
         </article>
       </div>
     </section>
-    <section class="section section-gallery">
+    <section class="section">
       <h2 class="title title-decor pictures-title">А можно в картинках?</h2>
-      <img class="picture picture-sunset" src="./images/sunset.png" alt="Рассвет" loading="lazy">
-      <img class="picture picture-ice-cream" src="./images/ice-cream.png" alt="Мороженное" loading="lazy">
-      <img class="picture picture-tape" src="./images/tape.png" alt="Касета" loading="lazy">
-      <img class="picture picture-books" src="./images/books.png" alt="Книги" loading="lazy">
-      <img class="picture picture-street" src="./images/street.png" alt="Улица" loading="lazy">
+      <div class="section-gallery">
+        <img class="picture picture-sunset" src="./images/sunset.png" alt="Рассвет" loading="lazy">
+        <img class="picture picture-ice-cream" src="./images/ice-cream.png" alt="Мороженное" loading="lazy">
+        <img class="picture picture-tape" src="./images/tape.png" alt="Касета" loading="lazy">
+        <img class="picture picture-books" src="./images/books.png" alt="Книги" loading="lazy">
+        <img class="picture picture-street" src="./images/street.png" alt="Улица" loading="lazy">
+      </div>
     </section>
   </main>
   <footer class="footer decorated-zone">
